force-app/main/default/objects/Product2/fields/Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Time__c</fullName>
    <label>Service Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Hours</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Night Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>