force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>Resource_Type__c</columns>
    <columns>Service_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>